--- a/style.css
+++ b/style.css
@@ -1,4 +1,61 @@
 *{
     margin: 0;
+    font-family: 'Poppins', sans-serif;
 }
 
+body {
+    overflow: hidden;
+}
+
+.nav {
+    background-color: #1500FF;
+    display: flex;
+    justify-content: space-between;
+    padding: 30px 50PX  ;
+}
+
+.nav h1 {
+    font-size : 45px ;
+}
+
+.nav__cherch {
+    align-self: center;
+    margin: 0 auto;
+    position: relative;
+}
+
+.nav__cherch::before {
+    content: '';
+    position: absolute;
+    top: 5px ;
+    left: 7px;
+    background-image: url(image/search-interface-symbol.png);
+    background-size: cover;
+    background-position: center;
+    width: 17px ;
+    height: 17px;
+}
+
+.nav__cherch input {
+    padding: 6px 30px;
+    border: none ;
+    border-radius : 20px ;
+    outline: none;
+}
+
+.callendri {
+    display: grid;
+    width: 90%;
+    grid-template-columns: repeat(7 , minmax(50px , 1fr));
+    gap: 20px;
+    margin: 30px auto;
+    height: 90vh;
+}
+
+.days {
+    background-color: #DEDEDE;
+    border-radius: 15px;
+    height: 200px;
+}
+
+.activ
