--- a/style.css
+++ b/style.css
@@ -49,13 +49,47 @@ body {
     grid-template-columns: repeat(7 , minmax(50px , 1fr));
     gap: 20px;
     margin: 30px auto;
-    height: 90vh;
 }
 
 .days {
     background-color: #DEDEDE;
     border-radius: 15px;
-    height: 200px;
+    height: auto;
+    display: grid;
+    grid-template-rows: 100px 1FR;
+    padding: 20px;
+    transition: all 0.3s ease;
 }
 
-.activ
+.activ:hover {
+    background-color: #1F2DF2;
+    box-shadow: 0 10px 20px #797979;
+    transform: translateY(-8px);
+}
+.unactive {
+    pointer-events: none;
+}
+.courrent__date {
+    font-size: 1.5rem;
+    font-weight: bold;
+
+}
+
+.detaille__reservation {
+    display: flex;
+    flex-direction: column;
+    background-color: yellow;
+    align-items: center;
+    gap: 15px;
+    padding: 10px;
+    border-radius: 20px;
+    font-weight: bold;
+}
+
+.nemr__UserReserver {
+    font-size: 14px;
+}
+
+
+
+
