--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
     padding: 15px 40px ;
     cursor: pointer;
     border-radius: 25px;
-    background-color: #3032FF;
+    background-color: #007bff;
          
 }
 
