--- a/style.css
+++ b/style.css
@@ -111,16 +111,25 @@
 /*======================*/
 
 
+.sectionform {
+    /* display: none; */
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.5 );
+    
+}
 
 .formReservation {
-    /* position: absolute;
-    top: 0;
-    left: 0; */
     width: 35%;
     display: grid;
     gap: 20px;
-    padding-left:20px ;
-    transform: translate(-50% ,-50%);
+    padding: 20px ;
     background: white;    
 }
 
@@ -128,5 +137,10 @@
     display: grid;
     gap: 20px;
 
+}
+
+.form-input-modif {
+    display : flex ;
+    
 }
 
