--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@
     border-radius: 20px;
     font-weight: bold;
     margin-bottom: 10px;
+    cursor: pointer;
 }
 
 .detaille__reservation span:last-child  {
