--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@
     font-weight: bold;
     margin-bottom: 10px;
     cursor: pointer;
+    z-index: 99;
 }
 
 .detaille__reservation span:last-child  {
