--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 }
 
 .nav h1 {
-    font-size : 45px ;
+    font-size : 3rem ;
 }
 
 .nav__reserver{
@@ -44,7 +44,7 @@
     grid-template-columns: repeat(7 , 1fr);
     width: 100%;
     justify-items: center;
-    font-size: 30px;
+    font-size: 2rem;
     
 }
 
@@ -104,7 +104,7 @@
 }
 
 .detaille__reservation span:last-child  {
-    font-size: 12px;
+    font-size: 0.7rem;
 }
 
 
@@ -174,7 +174,7 @@
     position: absolute ;
     top : 10px ;
     right : 20px ;
-    font-size: 30px;
+    font-size: 2rem;
     color : gray ;
     cursor: pointer;
     padding: 0 7px;
@@ -202,3 +202,8 @@
 .supprumer {
     background-color: red;
 }
+
+
+
+
+@ma
