--- a/style.css
+++ b/style.css
@@ -13,7 +13,10 @@
 }
 
 .nav h1 {
-    font-size : 3rem ;
+    font-size: 2.5rem;
+    color: white;
+    text-align: center;
+    letter-spacing: 1px;
 }
 
 .nav__reserver{
@@ -21,9 +24,17 @@
     flex-direction : column ;
     gap: 20px;
     align-items: center;
-    margin: 30px auto 0;
     width: 90%;
-    
+    margin: 40px auto;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+    padding: 30px;
+    border-radius: 15px;
+}
+
+.nav__reserver h1 {
+    font-size: 1.8rem;
+    margin-bottom: 20px;
+    color: #333;
 }
 
 .nav__reserver button {
@@ -55,7 +66,7 @@
 .callendri {
     display: grid;
     width: 90%;
-    grid-template-columns: repeat(7 , minmax(50px , 1fr));
+    grid-template-columns: repeat(7 , 1fr);
     gap: 20px;
     margin: 30px auto;
 }
@@ -68,6 +79,9 @@
     grid-template-rows: 100px 1FR;
     padding: 20px 10px;
     transition: all 0.3s ease;
+}
+.evrrycartdays {
+    
 }
 
 .evrrycartdays h4{
