add modifications on mediaquerie

--- a/style.css
+++ b/style.css
@@ -103,8 +103,8 @@
     padding: 5px;
     
 }
-.courrent__date span {
-    font-size: 1.5rem;
+.detaille__reservation span {
+    font-size: 0.8rem;
     font-weight: bold;
 
 }
